--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,25 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <style>
-        body{
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        html {
+            height: 100vh;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: sans-serif;
+            background: linear-gradient(#141e30, #243b55);
+        }
+
+        .login-box {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            width: 400px;
+            padding: 40px;
+            transform: translate(-50%, -50%);
+            background: rgba(0, 0, 0, .5);
+            box-sizing: border-box;
+            box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
+            border-radius: 10px;
+        }
+
+        .login-box h2 {
+            margin: 0 0 30px;
+            padding: 0;
+            color: #fff;
+            text-align: center;
+        }
+
+        .login-box .user-box {
+            position: relative;
+        }
+
+        .login-box .user-box input {
+            width: 100%;
+            padding: 10px 0;
+            font-size: 16px;
+            color: #fff;
+            margin-bottom: 30px;
+            border: none;
+            border-bottom: 1px solid #fff;
+            outline: none;
+            background: transparent;
+        }
+
+        .login-box .user-box label {
+            position: absolute;
+            top: 0;
+            left: 0;
+            padding: 10px 0;
+            font-size: 16px;
+            color: #fff;
+            pointer-events: none;
+            transition: .5s;
+        }
+
+        .login-box .user-box input:focus~label,
+        .login-box .user-box input:valid~label {
+            top: -20px;
+            left: 0;
+            color: #03e9f4;
+            font-size: 12px;
+        }
+
+        button {
+            background-color:#03e9f4 ;
+            padding-block: 5px;
+            font-size: medium;
+            font-weight: 600;
+            width: 90px;
+        }
+
+        p {
+            color: #fff;
+        }
+
+        a {
+            text-decoration: none;
         }
     </style>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0">
     <title>Login</title>
 </head>
+
 <body>
-    <h1>Login Form</h1>
     <form action="/user/login" method="post">
-        <label>Email</label>
-        <input type="text" required name="email">
 
-        <label>Password</label>
-        <input type="text" required name="password">
-
-        <button type="submit">Login</button>
+        <div class="login-box">
+            <h2>Login</h2>
+            <div class="user-box">
+                <input type="text" required name="email">
+                <label>Email</label>
+            </div>
+            <div class="user-box">
+                <input type="password" name="password" required=>
+                <label>Password</label>
+            </div>
+            <button type="submit">Login</button>
+            <p>Don't have an account? <a href="/signup">Create Account</a></p>
+        </div>
     </form>
 </body>
+
 </html>
