footer/social icons/contact page added

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,12 +10,14 @@
         body {
             margin: 0;
             padding: 0;
-            font-family: sans-serif;
             background: linear-gradient(#141e30, #243b55);
+            font-family: 'Times New Roman', Times, serif;
+            box-sizing: border-box;
         }
 
+
         .login-box {
-            position: fixed;
+            position: absolute;
             top: 50%;
             left: 50%;
             width: 400px;
@@ -70,7 +72,7 @@
         }
 
         button {
-            background-color:#03e9f4 ;
+            background-color: #03e9f4;
             padding-block: 5px;
             font-size: medium;
             font-weight: 600;
@@ -84,6 +86,8 @@
         a {
             text-decoration: none;
         }
+
+       
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0">
