--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,12 +34,11 @@
         }
 
         .url-container {
-
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 80vh;
+            height: 40vh;
         }
 
         span {
@@ -54,26 +53,59 @@
 
         img {
             width: 100px;
-           
+
         }
 
         .nav-bar ul {
             padding: 10px;
             padding-right: 20px;
             display: flex;
-            justify-content:flex-end;
-            gap: 80px;
+            justify-content: flex-end;
+            gap: 20px;
             list-style: none;
             font-size: 18px;
             font-weight: 700;
-            
+
         }
-        .nav-bar ul li a{
+
+        .nav-bar ul li a {
             text-decoration: none;
         }
-       
-        .analytics{
-            margin-top: 5%;
+
+        .analytics {
+            margin-top: 2%;
+        }
+
+        .footer {
+            margin-top: 2%;
+            color: #000000;
+
+            padding: 10px;
+
+        }
+
+        p {
+            color: black;
+        }
+
+        .footer-content {
+            justify-content: space-between;
+            align-items: center;
+            display: flex;
+        }
+
+        .social-icons a {
+            color: #000000;
+        
+            font-size: 24px;
+           
+            margin-left: 10px;
+         
+        }
+
+        .social-icons a:hover {
+            color: #ccc;
+            
         }
     </style>
 
@@ -88,11 +120,16 @@
     <div class="container">
         <nav>
             <div class="nav-bar">
-            <ul> 
-                <li>   <a href="/logout">
-                    <i class="fas fa-sign-out-alt"></i> Logout
-                </a></li>
-               
+                <ul>
+                  
+                    <li><a href="https://github.com/yashthakare93" target="_blank"><i class="fab fa-github"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/yash-thakare01/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="/contact" style="color: black;"><i class="fas fa-envelope"></i></a></li>
+                    <li>
+                        <a href="/logout">
+                            <i class="fas fa-sign-out-alt"></i> 
+                        </a>
+                    </li>
             </div>
         </nav>
 
@@ -116,49 +153,59 @@
                             </form>
                         </div>
 
-
+            </div>
             </div>
             <div class="analytics"></div>
-                <% if (locals.urls) { %>
-                    <h1>Analytics</h1>
-                    <table>
-                        <thead>
-                            <th>sr.no</th>
-                            <th>ShortId</th>
-                            <th>Redirect</th>
-                            <th>Clicks</th>
-                        </thead>
+            <% if (locals.urls) { %>
+                <h1>Analytics</h1>
+                <table>
+                    <thead>
+                        <th>sr.no</th>
+                        <th>ShortId</th>
+                        <th>Redirect</th>
+                        <th>Clicks</th>
+                    </thead>
 
-                        <tbody>
-                            <% urls.forEach(function(url, index) { %>
-                                <tr>
-                                    <td>
-                                        <%= index + 1 %>
-                                    </td>
-                                    <td>
-                                        <a style="text-decoration: none;" href="<%= baseUrl %>/url/<%= url.shortId %>">
-                                            <%= url.shortId %>
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <%= url.redirectURL %>
-                                    </td>
-                                    <td>
-                                        <%= url.visitsHistory.length %>
-                                    </td>
-                                </tr>
-                                <% }); %>
-                        </tbody>
+                    <tbody>
+                        <% urls.forEach(function(url, index) { %>
+                            <tr>
+                                <td>
+                                    <%= index + 1 %>
+                                </td>
+                                <td>
+                                    <a style="text-decoration: none;" href="<%= baseUrl %>/url/<%= url.shortId %>">
+                                        <%= url.shortId %>
+                                    </a>
+                                </td>
+                                <td>
+                                    <%= url.redirectURL %>
+                                </td>
+                                <td>
+                                    <%= url.visitsHistory.length %>
+                                </td>
+                            </tr>
+                            <% }); %>
+                    </tbody>
 
-                    </table>
-
-           
+                </table>
 
 
-            <% } %>
+
+
+                <% } %>
         </div>
-    </div>
 
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <p>&copy; 2024 YashThakareUrlShortner.</p>
+                <div class="social-icons">
+                    <a href="https://github.com/yashthakare93" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/yash-thakare01/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script>
 
         window.addEventListener('pageshow', function (event) {
